# diff-traffic-baseline

./: .gitignore  .gitmodules
LetsRender/: .hgignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
LetsRender/.hg/: dirstate  hgrc  undo.dirstate
LetsRender/.hg/cache/: branchheads-base  branchheads-served  tags
LetsRender/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo
LetsRender/.hg/store/data/: _android_manifest.xml.i  _c_make_lists.txt.i  ic__launcher-web.png.i  proguard-project.txt.i  project.properties.i  ~2ehgignore.i
LetsRender/.hg/store/data/_data/: _n_a_s_a___manhattan.jpg.d  _n_a_s_a___manhattan.jpg.i  _n_a_s_a___manhattan__bw.jpg.d  _n_a_s_a___manhattan__bw.jpg.i  _n_a_s_a___manhattan__cropped.jpg.d  _n_a_s_a___manhattan__cropped.jpg.i  aware__lane__stats.xml.i  campus__to__home.con.xml.d  campus__to__home.con.xml.i  campus__to__home.edg.xml.d  campus__to__home.edg.xml.i  campus__to__home.net.xml.d  campus__to__home.net.xml.i  campus__to__home.nod.xml.i  campus__to__home.osm.d  campus__to__home.osm.i  campus__to__home.tll.xml.i  large__san__fran.con.xml.d  large__san__fran.con.xml.i  large__san__fran.edg.xml.d  large__san__fran.edg.xml.i  large__san__fran.net.xml.i  large__san__fran.nod.xml.d  large__san__fran.nod.xml.i  large__san__fran.osm.i  large__san__fran.tll.xml.d  large__san__fran.tll.xml.i  level13.png.i  manhattan.cgf.xml.i  manhattan.cgf.xml~7e.i  manhattan.con.xml.i  manhattan.con.xml~7e.i  manhattan.edg.xml.i  manhattan.net.xml.d  manhattan.net.xml.i  manhattan.netcgf.xml.i  manhattan.nod.xml.i  manhattan.nod.xml~7e.i  manhattan.osm.xml.d  manhattan.osm.xml.i  (+24 more)
LetsRender/.hg/store/data/assets/: road__net.pb.d  road__net.pb.i  road__net__proto.txt.d  road__net__proto.txt.i
LetsRender/.hg/store/data/jni/: _c_make_lists.txt.i  _makefile.i  automagical__projector.hpp.i  billboard.hpp.i  camera.cpp.i  camera.hpp.i  check__gl__error.hpp.i  cmake__install.cmake.i  color.hpp.i  current__position.hpp.i  drawable.hpp.i  drawable__road__net.pb.cc.i  drawable__road__net.pb.h.i  drawable__road__net.proto.i  drawables.hpp.i  geometry.hpp.i  gl__code.cpp.i  global__controls.cpp.i  global__controls.hpp.i  location.cpp.i  location.hpp.i  log__config.hpp.i  material.hpp.i  matrix4.hpp.i  mobile__mapper.cpp.i  paramval.hpp.i  proto__renderer.hpp.i  render.hpp.i  road.hpp.i  road__class.hpp.i  road__database.txt.d  road__database.txt.i  road__net__proto.txt.d  road__net__proto.txt.i  road__network.hpp.i  road__network.pb.cc.i  road__network.pb.h.i  route.pb.cc.i  route.pb.h.i  satellite.hpp.i  (+16 more)
LetsRender/.hg/store/data/jni/drawables/: billboard.hpp.i  current__position.hpp.i  proto__renderer.hpp.i  road.hpp.i  road__network.hpp.i  route.pb.cc.i  route.pb.h.i  route__renderer.hpp.i  satellite.hpp.i  sumo__road__network.hpp.i  triangle.hpp.i
LetsRender/.hg/store/data/libs/: android-support-v4.jar.i
LetsRender/.hg/store/data/protobufs/: location.proto.i  route.proto.i
LetsRender/.hg/store/data/res/drawable/: blue__button.xml.i
LetsRender/.hg/store/data/res/drawable-hdpi/: ic__launcher.png.i
LetsRender/.hg/store/data/res/drawable-mdpi/: ic__launcher.png.i
LetsRender/.hg/store/data/res/drawable-xhdpi/: ic__launcher.png.i
LetsRender/.hg/store/data/res/drawable-xxhdpi/: ic__launcher.png.i
LetsRender/.hg/store/data/res/values/: dimens.xml.i  (+2 more)
LetsRender/.hg/store/data/src/: _c_make_lists.txt.i  _city_sight.d  _city_sight.i  _makefile.i  _mouse_navigation.hpp.i  automagical__projector.hpp.i  camera.cpp.i  camera.hpp.i  check__gl__error.hpp.i  city__sight.cpp.i  cmake__install.cmake.i  color.hpp.i  config.xml.i  drawable.hpp.i  drawable__road__net.pb.cc.i  drawable__road__net.pb.h.i  drawable__road__net.proto.i  drawables.hpp.i  geometry.hpp.i  gl__include.hpp.i  global__controls.cpp.i  global__controls.hpp.i  location.cpp.i  location.hpp.i  log__config.hpp.i  material.hpp.i  matrix4.hpp.i  mobile__mapper.cpp.i  mouse__navigation.hpp.i  paramval.hpp.i  render.hpp.i  road__class.hpp.i  road__database.txt.d  road__database.txt.i  road__net__proto.txt.d  road__net__proto.txt.i  road__network.pb.cc.i  road__network.pb.h.i  road__network.proto.i  route.pb.cc.i  (+20 more)
LetsRender/Data/: aware_lane_stats.xml  campus_to_home.con.xml  campus_to_home.edg.xml  campus_to_home.nod.xml  campus_to_home.tll.xml  large_san_fran.nod.xml  large_san_fran.tll.xml  manhattan.cgf.xml  manhattan.con.xml  manhattan.edg.xml  manhattan.netcgf.xml  manhattan.nod.xml  manhattan.tll.xml  short_lane_stats.xml
LetsRender/assets/: road_net.pb
LetsRender/src/: #config.xml#  .#CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  Makefile  MouseNavigation.hpp  automagical_projector.hpp  camera.cpp  camera.hpp  check_gl_error.hpp  city_sight.cpp  cmake_install.cmake  color.hpp  config.xml  destinations.txt  drawable.hpp  drawable_road_net.pb.cc  drawable_road_net.pb.h  drawable_road_net.proto  drawables.hpp  geometry.hpp  gl_include.hpp  global_controls.cpp  global_controls.hpp  gps_route_test.txt  location.cpp  location.hpp  log_config.hpp  material.hpp  matrix4.hpp  mouse_navigation.hpp  origins.txt  paramval.hpp  render.hpp  road_class.hpp  road_net.pb  road_net_proto.txt  road_network.pb.cc  road_network.pb.h  road_network.proto  (+20 more)
LetsRender/src/drawables/: billboard.hpp  cabspotter.hpp  current_position.hpp  location.pb.cc  location.pb.h  location.proto  proto_renderer.hpp  road.hpp  road_network.hpp  route.pb.cc  route.pb.h  route.proto  route_renderer.hpp  satellite.hpp  sumo_road_network.hpp  triangle.hpp
LetsRender/src/libsrc/proj-4.8.0/: Makefile  cmake_install.cmake
LetsRender/src/libsrc/proj-4.8.0/src/: CMakeLists.txt  Makefile  PJ_healpix.c  cmake_install.cmake  jniproj.c  pj_init.c  pj_open_lib.c  projects.h
LetsRender/src/libsrc/protobuf/: CMakeLists.txt  Makefile  cmake_install.cmake
LetsRender/src/libsrc/protobuf/examples/: addressbook.pb.cc  addressbook.pb.h
LetsRender/src/libsrc/zlib/: CMakeLists.txt  Makefile  cmake_install.cmake  inflate.c  ioapi.c  zutil.c  zutil.h
LetsRender/src/old/: drawable_road_net.pb.cc  drawable_road_net.pb.h
(+1813 files in other folders)
